<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity"
    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/backspace"
        app:tint="#212325"
        android:layout_marginStart="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="74dp"
        android:layout_height="68dp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="174.64dp"
        android:layout_marginEnd="173.36dp"
        android:src="@drawable/union"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:textSize="37sp"
        android:text="@string/sing_up_"
        android:textStyle="bold"
        android:textColor="@color/mainText"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/enter_your"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:text="@string/create_your_personal_profile_com_and_follow"
        android:textColor="@color/smallText"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/phone_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_your"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingVertical="12dp"
        android:layout_marginEnd="27dp"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@+id/phone_num"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background_iv"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_et"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/email"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingVertical="12dp"
        android:layout_marginEnd="27dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background_iv"
        />


    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/email_et"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/city_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/city"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingVertical="12dp"
        android:layout_marginEnd="27dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background_iv"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/city_et"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingVertical="12dp"
        android:layout_marginEnd="27dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background_iv"
        />

    <LinearLayout
        android:id="@+id/linear_by_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        android:layout_marginTop="17dp"
        >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/linear_by_"
        app:layout_constraintEnd_toEndOf="@+id/linear_by_"
        app:layout_constraintTop_toBottomOf="@+id/linear_by_"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="43dp"
        android:text="@string/sing_up_"
        android:textColor="@color/white"
        android:background="@drawable/rounded_background_bt"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="34dp"
        app:layout_constraintStart_toStartOf="@+id/sign_bt"
        app:layout_constraintEnd_toEndOf="@+id/sign_bt"
        app:layout_constraintTop_toBottomOf="@+id/sign_bt"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/already_have_an_account"
            android:includeFontPadding="false"
            android:textColor="@color/hint"
            />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:includeFontPadding="false"
            android:textColor="#277EFF"
            android:foreground="?android:attr/selectableItemBackground"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>